deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: utrml
  namespace: promec
  labels:
    kubernetes.io/name: "utrml"
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: utrml

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: utrml
  namespace: promec
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - utrml.promec.ioudaas.no
    secretName: utrml-tls
  rules:
  - host: utrml.promec.ioudaas.no
    http:
      paths:
      - path: /
        backend:
          serviceName: utrml
          servicePort: 80
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: utrml
  namespace: promec
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: utrml
        driver: nvidia-gpu
    spec:
      containers:
      - name: auth-proxy
        image: quay.io/uninett/goidc-proxy:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: /conf
          name: oidcconfig
        workingDir: /conf
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 150m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
      - name: utrml
        image: gurvin/deep-learning
        imagePullPolicy: Always
        resources:
          limits:
            memory: 4096Mi
            cpu: 4096m
            alpha.kubernetes.io/nvidia-gpu: 1
          requests:
            memory: 4096Mi
            cpu: 4096m
            alpha.kubernetes.io/nvidia-gpu: 1
        ports:
        - containerPort: 8888
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: 3159176d-1216-4024-bef0-c4569daab9e0
        - name: oidcconfig
          secret:
            defaultMode: 420
            secretName: utrml-dataporten

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: utrml
  namespace: promec
spec:
  podSelector:
    matchLabels:
      app: utrml
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-ingress
      ports:
        - protocol: TCP
          port: 80
